# ART

./: .env.example  pyproject.toml  skypilot-config.yaml
.github/workflows/: ruff.yml
dev/multi-task/: config.py  main.py  pyproject.toml  run.py  task.py  task_arte.py  task_summary.py  task_tau_airline.py  task_tau_retail.py  task_temporal.py  trainer.py
dev/multi-task/docs/: Task.md
dev/multi-task/scripts/: create_multitask_charts.py
dev/tau-bench/: pyproject.toml
docs/fundamentals/: art-client.mdx
docs/getting-started/: faq.mdx
examples/: art-e.ipynb  prisoners-dilemma.ipynb  rock-paper-tool-use.ipynb
examples/Summary-RL/: .env.example  .gitignore  CONFIGURING_AWS.md  README.md  pyproject.toml
examples/Summary-RL/benchmarks/: benchmark_models.py  display_benchmarks.ipynb
examples/Summary-RL/src/summarizer/: __init__.py  get_judge_completion.py  load_documents.py  rollout.py  train.py
examples/temporal_clue/: temporal-clue-7b-async.ipynb  temporal-clue-7b.ipynb  temporal-clue.ipynb
examples/tic_tac_toe/: tic-tac-toe.ipynb
requirements/: backend.vcs.txt
scripts/: launch-cluster.sh  launch-test-cluster.sh  run_checks.sh  setup.sh
src/art/: trajectories.py
src/art/dev/: engine.py  torchtune.py  train.py
src/art/local/: backend.py  service.py
src/art/preprocessing/: tokenize.py
src/art/torchtune/: batch.py  recipe.py  service.py
src/art/unsloth/: decoupled_service.py  service.py  state.py  train.py
src/art/vllm/: __init__.py  patches.py  server.py
tests/: integration.py
tests/unit/: test_tokenize_trajectory_groups.ipynb
